Fix CSS selector so spot-submission-alert is hidden by default

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -764,6 +764,6 @@ nav {
     pointer-events: none;
 }
 
-.spot-submission-alert{
+.spot-submission-alert.show{
     opacity: 1;
 }
